Correct footer alignment property
Fix footer alignment property from 'text-align' to 'align-item'.

--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,6 @@ nav{
 footer{
   background-color: lightgray;
   padding: 20px;
-  text-align: center;
+  align-item: center;
 }
 
